<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson_1_3.Homework3Activity">

    <TextView
        android:id="@+id/text_view_article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/article_margin"
        android:layout_marginHorizontal="@dimen/article_margin"
        android:background="@color/purple_700"
        android:padding="@dimen/padding"
        android:text="@string/article_title"
        android:textAppearance=
            "@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_article_heading"
        android:layout_marginHorizontal="@dimen/article_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/article_subtitle"
                android:textAppearance=
                    "@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/padding"
                android:padding="@dimen/padding"
                android:text="@string/article_text" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>