<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson_2_2.Homework5Activity">

    <TextView
        android:id="@+id/text_view_show_count_hw5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_initial_value"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_count_hw5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/count"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_show_count_hw5"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/margin_top"
        android:inputType="text"
        android:hint="@string/any_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_count_hw5"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="no" />

</androidx.constraintlayout.widget.ConstraintLayout>